# vulkan_learning

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: clang-format.cmake  fetch-assimp.cmake  fetch-autodiff.cmake  fetch-boost.cmake  fetch-cgal.cmake  fetch-eigen.cmake  fetch-glfw.cmake  fetch-glm.cmake  fetch-googletest.cmake  fetch-imgui.cmake  fetch-jsoncpp.cmake  fetch-libigl.cmake  fetch-random.cmake  fetch-rootfinder.cmake  fetch-spirv_cross.cmake  fetch-stb.cmake  fetch-svgpp.cmake  fetch-tinyobjloader.cmake
data/bezier/: cross_bd0.json  cross_bd1.json  cross_bd2.json  shape0.json  shape1.json  shape10.json  shape2.json  shape3.json  shape4.json  shape5.json  shape6.json  shape7.json  shape8.json  shape9.json  shape_high_order1.json  shape_high_order2.json  shape_high_order3.json  shape_order_10.json  shape_order_15.json  shape_order_20.json  shape_order_25.json  shape_order_5.json  spur_1.json
data/light/: light_source.mtl
data/models/: model1.blend  model1.blend1  model1.mtl
data/models/cornell_box/: cornell_box.blend  cornell_box.mtl
docs/: Doxyfile.in
include/coroutine/: generator.hpp
include/demo/utils/: controller.hpp
include/geometry/: renderable_geometry.hpp
include/geometry_processing/: gauss_curvature.hpp  variable_manager.hpp  variable_manager.hpp.impl
include/meta_programming/: multi_dim_array.hpp  multi_min_max.hpp  name_of.hpp  static_for_loop.hpp  static_string.hpp  type_list.hpp
include/particle/: particle.hpp
include/ray_tracer/: ray.hpp  ray_picker.hpp  ray_tracer.hpp
include/vkl/: vkl_box.hpp  vkl_box_model.hpp  vkl_buffer.hpp  vkl_camera.hpp  vkl_compute_pipeline.hpp  vkl_descriptor.hpp  vkl_device.hpp  vkl_frame_info.hpp  vkl_graphics_pipeline.hpp  vkl_image.hpp  vkl_model.hpp  vkl_object.hpp  vkl_offscreen_renderer.hpp  vkl_pipeline.hpp  vkl_renderer.hpp  vkl_scene.hpp  vkl_swap_chain.hpp  vkl_texture.hpp  vkl_window.hpp
scripts/: clang-formatter.py
src/bezier_curve/: CMakeLists.txt  application.cpp  application.hpp
src/demo/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/demo/configs/: imgui.ini  material_info.json  scene_info.json
src/demo/scripts/: containment_script.hpp  render_script_base.hpp  render_srcipt_base.hpp
src/demo/ui/: geometry_processing_ui.cpp  geometry_processing_ui.hpp  material_ui.cpp  material_ui.hpp  picking_ui.cpp  picking_ui.hpp  render_mode_ui.cpp  render_mode_ui.hpp  scene_manager.cpp  scene_manager.hpp  scene_render_ui.cpp  scene_render_ui.hpp  scene_ui.cpp  scene_ui.hpp  ui_manager.cpp  ui_manager.hpp  ui_manager_register.hpp
src/demo/ui/components/: geometry_processing_ui.cpp  geometry_processing_ui.hpp  material_ui.cpp  material_ui.hpp  picking_ui.cpp  picking_ui.hpp  render_mode_ui.cpp  render_mode_ui.hpp  scene_info.cpp  scene_info.hpp  scene_manager.cpp  scene_manager.hpp  scene_render_ui.cpp  scene_render_ui.hpp  scene_ui.cpp  scene_ui.hpp  uv_render_ui.cpp  uv_render_ui.hpp
src/demo/ui/components/bezier_editor/: bezier_editor_panel_ui.cpp  bezier_editor_panel_ui.hpp  bezier_editor_ui.cpp  bezier_editor_ui.hpp
src/demo/utils/: controller.cpp
src/geometry/: CMakeLists.txt
src/geometry/autodiff/: autodiff.cpp
src/geometry/function/: bernstein.cpp
src/geometry/io/: svg_importer.cpp
src/geometry/loop/: path_2d.cpp
src/geometry/parameter_space/: bezier_clipping.cpp  bezier_curve_2d.cpp  bezier_root_finder.cpp
src/geometry/surface/: tensor_product_bezier.cpp
src/geometry_processing/: CMakeLists.txt  gauss_curvature.cpp  laplacian_boundary_z_axis_valued.cpp  normal_vector.cpp  single_source_exact_geodesic_distance.cpp
src/particle/: CMakeLists.txt  application.cpp  application.hpp
src/particle/shader/: CMakeLists.txt  particle.comp  particle.frag  particle.vert
src/particle/system/: particle_render_system.cpp  particle_simulation_system.cpp
src/ray_tracer/: CMakeLists.txt  ray.cpp  ray_picker.cpp  ray_tracer.cpp
src/rendergraph_demo/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/simulation/: CMakeLists.txt
src/simulation/walk_on_sphere/: walk_on_sphere.cpp  walk_on_sphere_anisotropic.cpp
src/vkl/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  vkl_buffer.cpp  vkl_buffer.hpp  vkl_camera.cpp  vkl_camera.hpp  vkl_compute_pipeline.cpp  vkl_descriptor.cpp  vkl_descriptor.hpp  vkl_device.cpp  vkl_device.hpp  vkl_frame_info.hpp  vkl_graphics_pipeline.cpp  vkl_graphics_pipeline.hpp  vkl_image.cpp  vkl_model.cpp  vkl_model.hpp  vkl_object.cpp  vkl_object.hpp  vkl_offscreen_renderer.cpp  vkl_renderer.cpp  vkl_renderer.hpp  vkl_scene.cpp  vkl_swap_chain.cpp  vkl_swap_chain.hpp  vkl_texture.cpp  vkl_texture.hpp  vkl_window.cpp  vkl_window.hpp
src/vkl/bvh/: vkl_bvh.cpp
src/vkl/core/: vkl_buffer.cpp  vkl_compute_pipeline.cpp  vkl_descriptor.cpp  vkl_device.cpp  vkl_graphic_pipeline.cpp  vkl_image.cpp  vkl_offscreen_renderer.cpp  vkl_renderer.cpp  vkl_swap_chain.cpp  vkl_texture.cpp  vkl_window.cpp
src/vkl/io/: assimp_loader.cpp  assimp_loader.hpp  tiny_obj_loader.cpp  vkl_image_export.cpp
src/vkl/scene/: vkl_collection.cpp  vkl_object.cpp  vkl_scene.cpp
src/vkl/shader/: curve_mesh_shader.vert  line_shader.vert  normal_generation.geom  normal_shader.vert  param_curve_shader.vert  path_tracing_compute_shader.comp  path_tracing_post_shader.vert  point_cloud_2d_shader.frag  point_cloud_2d_shader.vert  point_light_shader.frag  simple_color_shader.frag  simple_shader.frag  simple_shader.vert  simple_shader_2d.frag  simple_shader_2d.vert
src/vkl/system/: path_tracing_compute_system.cpp  simple_render_system.cpp  simple_render_system.hpp
src/vkl/utils/: keyboard_camera_controller.cpp  keyboard_camera_controller.hpp  vkl_camera.cpp
test/: CMakeLists.txt
test/autodiff/: autodiff_test.cpp  geometry_autodiff_test.cpp
test/coroutine/: generator.cpp
test/geometry/function/: bernstein_test.cpp  bezier2d_evaluate.cpp
test/geometry/surface/: tensor_product_bezier_test.cpp
test/templates/: meta_programming_test.cpp  vkl_type_list_test.cpp
(+103 files in other folders)
